--- a/.github/workflows/mayhem.yml
+++ b/.github/workflows/mayhem.yml
@@ -7,20 +7,23 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  corrected_prelude_crc_MAYHEMFILE: Mayhem/corrected_prelude_crc.mayhemfile
-  mutated_headers_MAYHEMFILE: Mayhem/mutated_headers.mayhemfile
-  parse_date_time_MAYHEMFILE: Mayhem/parse_date_time.mayhemfile
-  parse_epoch_seconds_MAYHEMFILE: Mayhem/parse_epoch_seconds.mayhemfile
-  parse_http_date_MAYHEMFILE: Mayhem/parse_http_date.mayhemfile
-  prelude_MAYHEMFILE: Mayhem/prelude.mayhemfile
-  raw_bytes_MAYHEMFILE: Mayhem/raw_bytes.mayhemfile
-  read_date_time_MAYHEMFILE: Mayhem/read_date_time.mayhemfile
-  read_http_date_MAYHEMFILE: Mayhem/read_http_date.mayhemfile
-  read_many_from_str_MAYHEMFILE: Mayhem/read_many_from_str.mayhemfile
-  round_trip_MAYHEMFILE: Mayhem/round_trip.mayhemfile
+
 jobs:
+  # From https://brunoscheufler.com/blog/2021-10-09-generating-dynamic-github-actions-workflows-with-the-job-matrix-strategy
+  make-matrix:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.mayhemfiles }}
+    steps:
+      - uses: actions/checkout@v3
+
+      - id: set-matrix
+        run: |
+          files="\"$(ls -1 Mayhem/*.mayhemfile | paste -sd "," - | sed 's/,/","/g')\""
+          echo "Files: $files"
+          echo "mayhemfiles=[$files]" >> $GITHUB_OUTPUT
   build:
-    name: ${{ matrix.os }} shared=${{ matrix.shared }} ${{ matrix.build_type }}
+    name: '${{ matrix.os }} shared=${{ matrix.shared }} ${{ matrix.build_type }}'
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -28,36 +31,56 @@ jobs:
         shared: [false]
         build_type: [Release]
         include:
-        - os: ubuntu-latest
-          triplet: x64-linux
+          - os: ubuntu-latest
+            triplet: x64-linux
+    outputs:
+      image: ${{ steps.meta.outputs.tags }}
     steps:
-    - uses: actions/checkout@v2
-    - name: Log in to the Container registry
-      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Extract metadata (tags, labels) for Docker
-      id: meta
-      uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-      with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-    - name: Build and push Docker image
-      uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-      with:
-        context: .
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-    - name: Start analysis
-      uses: ForAllSecure/mcode-action@v1
-      with:
-        mayhem-token: ${{ secrets.MAYHEM_TOKEN }}
-        args: --image ${{ steps.meta.outputs.tags }} --file ${{ env.round_trip_MAYHEMFILE
-          }}
-        sarif-output: sarif
-    - name: Upload SARIF file(s)
-      uses: github/codeql-action/upload-sarif@v1
-      with:
-        sarif_file: sarif
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2.1.0
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4.1.1
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3.2.0
+        with:
+          context: .
+          push: true
+          file: mayhem/Dockerfile
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+  mayhem:
+    needs: [build, make-matrix]
+    name: 'fuzz ${{ matrix.mayhemfile }}'
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        mayhemfile: ${{ fromJSON(needs.make-matrix.outputs.matrix) }}
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Start analysis for ${{ matrix.mayhemfile }}
+        uses: ForAllSecure/mcode-action@v1
+        with:
+          mayhem-token: ${{ secrets.MAYHEM_TOKEN }}
+          args: --image ${{ needs.build.outputs.image }} --file ${{ matrix.mayhemfile }} --duration 300
+          sarif-output: sarif
+
+      - name: Upload SARIF file(s)
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: sarif
